examples/test/testpolicy1334.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1334
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key15: value49
      key41: value14
      key43: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value28
      podSelector:
        matchLabels:
          key48: value48
          key39: value25
